Added proxy configs

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -315,3 +315,30 @@ msgctxt "#30409"
 msgid "Disagree"
 msgstr ""
 
+msgctxt "#30410"
+msgid "To watch iPlayer TV content legally, you need a UK TV Licence."
+msgstr ""
+
+msgctxt "#30500"
+msgid "HTTP Proxy"
+msgstr ""
+
+msgctxt "#30510"
+msgid "Use Proxy"
+msgstr ""
+
+msgctxt "#30520"
+msgid "Proxy Host"
+msgstr ""
+
+msgctxt "#30530"
+msgid "Proxy Port"
+msgstr ""
+
+msgctxt "#30540"
+msgid "Proxy Username"
+msgstr ""
+
+msgctxt "#30550"
+msgid "Proxy Password"
+msgstr ""
